@@ -1,1 +1,33 @@
 # ShoppingListApp
+# 🛒 Java Shopping List App (JavaFX)
+
+A simple shopping list application built using **Java**, applying **OOP principles** and a GUI built with **JavaFX**.
+
+## ✨ Features
+- Add item
+- Edit item
+- Delete item
+- Search item
+- Mark as bought
+- JavaFX GUI
+
+## 📁 Structure
+src/
+│ └── ShoppingListApp.java
+│ ├── Item.java
+│ └── ShoppingList.java
+
+## 🚀 How to Run
+
+### Requirement
+- Java JDK 17+
+- JavaFX SDK 24.0.1
+
+### Run with IDE (IntelliJ/VSCode)
+- Tambahkan SDK JavaFX ke library
+- VM Options:
+--module-path "C:\Users\javafx-sdk-24.0.1\lib" --add-modules javafx.controls,javafx.fxml
+## 👨‍💻 Author
+
+Made with ❤️ by 👷‍♂️[Figa Daffa](https://github.com/figadafa/ShoppingListApp.git)
+
